Ajustando Classe PacienteController e PacienteService